# golden-magic

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/golden-magic-contributor/: SKILL.md
.beads/: README.md  interactions.jsonl  issues.jsonl  metadata.json
benches/: parser.rs
corpus/: agentic-runs.seed.json  cli-corpus.queries.txt  cli-tools.seed.json  generated-executable-fixtures.seed.json  modeling.seed.json
docs/: ARCHITECTURE.md  COMPLETION-AUDIT.md  CORPUS-10000.md  DEBUG-INSTRUMENTATION.md  DESCRIPTORS.md  EXTENSIONS.md  KNOWN-TOOLS.md  NATIVE-RUNTIME-REVIEW.md  NIX-FIXTURES.md  PARSER-BACKENDS.md  PERFORMANCE.md  PRIOR-ART.md  SDK.md  TEST-MATRIX.md  TOOL-PACKS.md  VISION.md
examples/descriptors/simple-pipes/: descriptor.toml  expected.rows.json  input.txt  negative.txt
nu/: golden-magic.nu
openspec/: golden-magic-core.md
schemas/: descriptor.schema.json  tool-pack.schema.json
scripts/: apply_corpus_modeling_seed.js  fetch_cli_corpus_seed.sh  generate_cli_corpus_queries.sh  generate_executable_json_fixtures.js
src/: cli.rs  config.rs  descriptors.rs  lib.rs  main.rs  tool_packs.rs
tests/: cli.rs  corpus_manifest.rs  descriptor_fixtures.rs  generated_matrix.rs  nix_fixture.rs  nu_plugin.rs  nu_wrapper.rs  performance_gate.rs
tests/fixtures/descriptors/3mux-panes/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/abtop-processes/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/accent-translations/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/accessibility-developer-tools-audits/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/acd-cli-files/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/acmesh-certs/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/across-nodes/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/adamschwartz-log-events/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/adguardian-term-rules/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/adrenaline-fixes/: descriptor.toml  expected.rows.json  input.txt  negative.txt
tests/fixtures/descriptors/aeneas-alignments/: descriptor.toml  input.txt  (+2 more)
tests/support/: mod.rs
(+5854 files in other folders)
