[package]
name = "golden-magic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.7.0"
predicates = "3.1.3"
proptest = "1.6.0"
tempfile = "3.27.0"

[[bench]]
name = "parser"
harness = false
