[package]
name = "golden-magic"
version = "0.1.0"
edition = "2024"
description = "Parse hostile CLI table-ish text into structured rows for Nushell workflows."
license = "MIT"
repository = "https://github.com/ramarivera/golden-magic"
homepage = "https://github.com/ramarivera/golden-magic"
readme = "README.md"
keywords = ["nushell", "parser", "cli", "tables", "plugin"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.8"
nu-plugin = "0.113.1"
nu-protocol = "0.113.1"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.7.0"
predicates = "3.1.3"
proptest = "1.6.0"
tempfile = "3.27.0"

[[bench]]
name = "parser"
harness = false
