[package]
name = "golden-magic"
version = "0.1.1"
edition = "2024"
description = "Parse hostile CLI table-ish text into structured rows for Nushell workflows."
license = "MIT"
repository = "https://github.com/ramarivera/golden-magic"
homepage = "https://github.com/ramarivera/golden-magic"
readme = "README.md"
keywords = ["nushell", "parser", "cli", "tables", "plugin"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.8"
nu-plugin = { version = "0.113.1", optional = true }
nu-protocol = { version = "0.113.1", optional = true }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
wasmi = "2.0.0-beta.2"

[features]
default = []
nu-plugin = ["dep:nu-plugin", "dep:nu-protocol"]

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.7.0"
predicates = "3.1.3"
proptest = "1.6.0"
tempfile = "3.27.0"

[[bin]]
name = "nu_plugin_golden_magic"
path = "src/bin/nu_plugin_golden_magic.rs"
required-features = ["nu-plugin"]

[[bench]]
name = "parser"
harness = false
